--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,8 @@ params:
     position:       "Frontend Software Engineer"
     email:          "me@matanlurey.com"
     avatar:         "matan.jpg"
-    background:     bg4.png
+    favicon:        "favicon.ico"
+    background:     "bg4.png"
 
     social:
         -
